태그 관리 화면 버그 수정

--- a/views/super/tags.twig
+++ b/views/super/tags.twig
@@ -5,104 +5,8 @@
 {% endblock %}
 
 {% block script %}
+  <script>
+    window.tags = {{ tags|json_encode|raw }};
+  </script>
   <script src="/static/dist/tags.js"></script>
-{% endblock %}
-
-{% block body %}
-  <h4>태그 등록</h4>
-  <form class="clearfix" method="POST">
-    <table class="table table-bordered">
-      <colgroup>
-        <col width="200"/>
-        <col width="80"/>
-      </colgroup>
-      <thead>
-      <tr>
-        <th>태그 이름</th>
-        <th>사용 여부</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr>
-        <td><input type="text" class="input-block-level" name="name"/></td>
-        <td>
-          <select class="input-block-level" name="is_use">
-            <option value="1">Y</option>
-            <option value="0">N</option>
-          </select>
-        </td>
-      </tr>
-      </tbody>
-    </table>
-    <div class="pull-right">
-      <button type="submit" class="btn btn-primary">저장</button>
-    </div>
-  </form>
-
-  <h4>태그 목록</h4>
-  <form id="updateForm" class="form-horizontal form-inline">
-    <table class="table table-bordered">
-      <colgroup>
-        <col width="20"/>
-        <col width="20"/>
-        <col width=""/>
-        <col width="80"/>
-        <col width="80"/>
-        <col width="80"/>
-        <col width="80"/>
-        <col width="80"/>
-        <col width="80"/>
-      </colgroup>
-      <thead>
-      <tr>
-        <th></th>
-        <th>ID</th>
-        <th>태그 이름</th>
-        <th>생성자</th>
-        <th>사용 여부</th>
-        <th>최초 생성일</th>
-        <th>최근 수정일</th>
-        <th>포함된 메뉴</th>
-        <th>사용 유저 수</th>
-      </tr>
-      </thead>
-      <tbody>
-      {% for tag in tags %}
-        <tr id="tag_tr_{{ tag.id }}" {% if tag.is_use == 0 %}class="danger"{% endif %}>
-          <td>
-            <input type="checkbox">
-            <input type="hidden" name="id" value="{{ tag.id }}"/>
-          </td>
-          <td>{{ tag.id }}</td>
-          <td><input type="text" class="input-block-level" name="name" value="{{ tag.name }}"/></td>
-          <td>{{ tag.creator }}</td>
-          <td>
-            <select class="input-block-level" name="is_use">
-              <option value="1" {% if tag.is_use == 1 %}selected="selected"{% endif %}>Y</option>
-              <option value="0" {% if tag.is_use == 0 %}selected="selected"{% endif %}>N</option>
-            </select>
-          </td>
-          <td>{{ tag.created_at }}</td>
-          <td>{{ tag.updated_at }}</td>
-          <td>
-            <a href='#' data-toggle="modal" data-target="#js_menus_dialog" data-tag-id="{{ tag.id }}">
-              {{ tag.menus_count }}
-            </a>
-          </td>
-          <td>
-            <a href="#" data-toggle="modal" data-target="#js_users_dialog" data-tag-id="{{ tag.id }}">
-              {{ tag.users_count }}
-            </a>
-          </td>
-        </tr>
-      {% endfor %}
-      </tbody>
-    </table>
-    <div>
-      <div class="pull-right">
-        <button type="button" class="btn btn-danger" id="js_delete">삭제</button>
-        <button type="button" class="btn btn-primary" id="updateBtn">저장</button>
-      </div>
-    </div>
-  </form>
 {% endblock %}
