select2 찾지 못하는 문제 수정

--- a/views/index_newer.twig
+++ b/views/index_newer.twig
@@ -36,9 +36,8 @@
   {% endblock %}
 
   <link rel="stylesheet" href="{{ STATIC_URL }}/css/admin/admin.css">
-  <link rel="stylesheet" href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/static/node_modules/select2/dist/css/select2.min.css">
-
+  <link rel="stylesheet" href="/static/dist/styles.css">
+  
   <script src="/static/dist/commons.js"></script>
 </head>
 <body>
