그래프 라이브러리 추가

--- a/views/index_new.twig
+++ b/views/index_new.twig
@@ -102,6 +102,8 @@
           'tinyMCE': '/static/bower_components/tinymce/tinymce.min',
           'lazyload': '/static/bower_components/vanilla-lazyload/dist/lazyload.min',
           'Sortable': '/static/bower_components/Sortable/Sortable.min',
+          'd3': '/static/bower_components/d3/d3.min',
+          'metrics-graphics': '/static/bower_components/metrics-graphics/dist/metricsgraphics.min',
 
           'atagToDownloadTable': '{{ STATIC_URL }}/js/jquery.atag.to.download.table',
           'monthpicker': '{{ STATIC_URL }}/js/jquery.monthpicker-0.1',
