--- a/views/comm/left_menu_new.twig
+++ b/views/comm/left_menu_new.twig
@@ -1,59 +1,59 @@
 <div class="panel panel-default hidden-xs hidden-sm hidden-md" style="padding: 10px;">{#데스크탑 사이즈#}
-    <h4>Ridibooks CMS</h4>
-    <select class="form-control menu_select">
-        <option></option>
-        {% for menu in session_user_menu %}
-            {% if menu.menu_deep == 0 %}
-                <option value="{{ menu.menu_url }}" disabled="disabled">{{ menu.menu_title }}</option>
-            {% else %}
-                <option value="{{ menu.menu_url }}">{{ menu.menu_title }}</option>
+  <h4>Ridibooks CMS</h4>
+  <select class="form-control menu_select">
+    <option></option>
+    {% for menu in session_user_menu %}
+      {% if menu.menu_deep == 0 %}
+        <option value="{{ menu.menu_url }}" disabled="disabled">{{ menu.menu_title }}</option>
+      {% else %}
+        <option value="{{ menu.menu_url }}">{{ menu.menu_title }}</option>
+      {% endif %}
+    {% endfor %}
+  </select>
+  <ul class="nav nav-pills nav-stacked">
+    {% for menu in session_user_menu %}
+      {% if menu.menu_deep == 0 %}
+        <li><h5>{{ menu.menu_title }}</h5></li>
+      {% else %}
+        {% if REQUEST_URI == menu.menu_url %}
+          <li class="active">
+        {% else %}
+          <li
+          {# TODO AuthService refactoring 할때 고려할 것(실제로 menu에 사용되는 data만 내려줄 것) #}
+          {% for ajax in menu.ajax_array %}
+            {% if REQUEST_URI starts with ajax.ajax_url %}
+              class="active"
             {% endif %}
-        {% endfor %}
-    </select>
-    <ul class="nav nav-pills nav-stacked">
-        {% for menu in session_user_menu %}
-            {% if menu.menu_deep == 0 %}
-                <li><h5>{{ menu.menu_title }}</h5></li>
-            {% else %}
-                {% if REQUEST_URI == menu.menu_url %}
-                    <li class="active">
-                {% else %}
-                    <li
-                    {# TODO AuthService refactoring 할때 고려할 것(실제로 menu에 사용되는 data만 내려줄 것) #}
-                    {% for ajax in menu.ajax_array %}
-                        {% if REQUEST_URI starts with ajax.ajax_url %}
-                            class="active"
-                        {% endif %}
-                    {% endfor %}
-                    >
-                {% endif %}
-                    <a href="{{ menu.menu_url }}" {% if menu.is_newtab %}target="_blank"{% endif %}>{{ menu.menu_title }}</a>
-                </li>
-            {% endif %}
-        {% endfor %}
-        <li><a href="/comm/user_info">개인정보 수정</a></li>
-        <li><a href="/logout">Logout</a></li>
-    </ul>
+          {% endfor %}
+          >
+        {% endif %}
+        <a href="{{ menu.menu_url }}" {% if menu.is_newtab %}target="_blank"{% endif %}>{{ menu.menu_title }}</a>
+        </li>
+      {% endif %}
+    {% endfor %}
+    <li><a href="/me">개인정보 수정</a></li>
+    <li><a href="/logout">Logout</a></li>
+  </ul>
 </div>
 <div class="hidden-lg">{#타블렛, 핸드폰 사이즈#}
-    <div class="panel panel-primary">
-        <div class="panel-heading clearfix">
-            <div class="col-xs-4">
-                <h1 class="panel-title">Ridibooks CMS</h1>
-            </div>
+  <div class="panel panel-primary">
+    <div class="panel-heading clearfix">
+      <div class="col-xs-4">
+        <h1 class="panel-title">Ridibooks CMS</h1>
+      </div>
 
-            <div class="col-xs-8">
-                <select class="form-control menu_select">
-                    <option></option>
-                    {% for menu in session_user_menu %}
-                        {% if menu.menu_deep == 0 %}
-                            <option value="{{ menu.menu_url }}" disabled="disabled">{{ menu.menu_title }}</option>
-                        {% else %}
-                            <option value="{{ menu.menu_url }}">{{ menu.menu_title }}</option>
-                        {% endif %}
-                    {% endfor %}
-                </select>
-            </div>
-        </div>
+      <div class="col-xs-8">
+        <select class="form-control menu_select">
+          <option></option>
+          {% for menu in session_user_menu %}
+            {% if menu.menu_deep == 0 %}
+              <option value="{{ menu.menu_url }}" disabled="disabled">{{ menu.menu_title }}</option>
+            {% else %}
+              <option value="{{ menu.menu_url }}">{{ menu.menu_title }}</option>
+            {% endif %}
+          {% endfor %}
+        </select>
+      </div>
     </div>
+  </div>
 </div>
