--- a/views/login.twig
+++ b/views/login.twig
@@ -3,6 +3,7 @@
 <head>
   <title>Ridibooks CMS</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="/static/bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
 
@@ -10,51 +11,7 @@
     body {
       padding-top: 120px;
       padding-bottom: 40px;
-      background-color: #ddd;
     }
-
-    .form-signin {
-      max-width: 330px;
-      padding: 15px;
-      margin: 0 auto;
-      background-color: #f3f3f3;
-    }
-
-    .form-signin .form-control {
-      -webkit-touch-callout: none;
-      /*-webkit-user-select: none;*/
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-      position: relative;
-      font: 15px 'Segoe UI', Arial, sans-serif;
-      background-color: #EAEBE5;
-      height: auto;
-      padding: 10px;
-      color: #7e8c8d;
-      outline: none;
-      -webkit-box-sizing: border-box;
-      -moz-box-sizing: border-box;
-      box-sizing: border-box;
-    }
-
-    .form-signin input[type="text"] {
-      margin-bottom: -1px;
-      border-bottom-left-radius: 0;
-      border-bottom-right-radius: 0;
-    }
-
-    .form-signin input[type="password"] {
-      margin-bottom: 10px;
-    }
-
-    .container {
-      box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
-      width: 288px;
-      margin: 0 auto;
-      padding: 0;
-    }
-
   </style>
 </head>
 
@@ -62,15 +19,29 @@
 
 <div class="container">
   <div class="row">
-    <div class="container" id="formContainer">
+    <div class="col-md-offset-4 col-md-4">
+      <h3 class="text-center">Ridibooks CMS</h3>
+      <hr/>
 
-      <form method="post" class="form-signin" role="form">
-        <h3 class="form-signin-heading">Ridibooks CMS</h3>
-        <input type="text" class="form-control" name="id" placeholder="ID" required autofocus>
-        <input type="password" class="form-control" name="passwd" placeholder="Password" required>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+      <form class="form-horizontal" role="form" method="post">
+        <div class="form-group">
+          <label for="inputId" class="col-sm-3 control-label">ID</label>
+          <div class="col-sm-9">
+            <input type="text" class="form-control" id="inputId" name="id" placeholder="ID" required autofocus>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputPassword" class="col-sm-3 control-label">Password</label>
+          <div class="col-sm-9">
+            <input type="password" class="form-control" id="inputPassword" name="passwd" placeholder="Password" required>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-3 col-sm-9">
+            <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+          </div>
+        </div>
       </form>
-
     </div>
   </div>
 </div>
