--- a/views/login.twig
+++ b/views/login.twig
@@ -4,8 +4,8 @@
   <title>Ridibooks CMS</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/static/bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="{{ BOWER_PATH }}/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="{{ BOWER_PATH }}/bootstrap/dist/css/bootstrap-theme.min.css">
 
   <style>
     body {
