--- a/views/login.twig
+++ b/views/login.twig
@@ -28,7 +28,7 @@
       <h3 class="text-center">Ridibooks CMS</h3>
       <hr/>
 
-      <form class="form-horizontal" role="form" action="/login.cms" method="post">
+      <form class="form-horizontal" role="form" action="/login-cms" method="post">
         <div class="form-group">
           <label for="inputId" class="col-sm-3 control-label">ID</label>
           <div class="col-sm-9">
