Remove Azure Login

--- a/views/login.twig
+++ b/views/login.twig
@@ -50,10 +50,10 @@
 
       <hr/>
 
-      <p class="comment">Or you can login with Azure</p>
-      <a role="button" class="btn btn-info btn-block" href='{{ azure_login }}'>
-        Sign in with Azure
-      </a>
+      {#<p class="comment">Or you can login with Azure</p>#}
+      {#<a role="button" class="btn btn-info btn-block" href='{{ azure_login }}'>#}
+        {#Sign in with Azure#}
+      {#</a>#}
 
     </div>
   </div>
