Add icon links.

--- a/views/index_new.twig
+++ b/views/index_new.twig
@@ -49,6 +49,7 @@
   {% endblock %}
 
   {% block head %}
+    {% include '/comm/icon.twig' %}
     <link rel="stylesheet" href="{{ STATIC_URL }}/css/admin/admin.css">
     <link rel="stylesheet" href="{{ BOWER_PATH }}/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ BOWER_PATH }}/jquery-ui/themes/smoothness/jquery-ui.min.css">
