--- a/views/login.twig
+++ b/views/login.twig
@@ -4,6 +4,8 @@
   <title>Ridibooks CMS</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  {% include '/comm/icon.twig' %}
   <link rel="stylesheet" href="{{ BOWER_PATH }}/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="{{ BOWER_PATH }}/bootstrap/dist/css/bootstrap-theme.min.css">
 
