첫 페이지에 메뉴얼 링크 추가 및 E_WARNING 수정

--- a/views/welcome.twig
+++ b/views/welcome.twig
@@ -6,6 +6,9 @@
 
 {% block body %}
   <div class="col-xs-12">
-    권한 신청하기: <a href="https://app.asana.com/0/215306209905636/215207316128603">개발 지원 요청</a>
+    <ul>
+      <li>권한 신청하기: <a href="https://app.asana.com/0/215306209905636/215207316128603" target="_blank">개발 지원 요청</a></li>
+      <li>CMS 메뉴얼: <a href="https://ridicorp.atlassian.net/wiki/spaces/operation/pages/239796419/CMS" target="_blank">위키 바로가기</a></li>
+    </ul>
   </div>
 {% endblock %}
