--- a/views/login.twig
+++ b/views/login.twig
@@ -29,7 +29,7 @@
     <div class="col-md-offset-4 col-md-4">
       <h3 class="text-center">Ridibooks CMS</h3>
       <hr/>
-      <a role="button" class="btn btn-info btn-block" href='{{ azure_login }}'>
+      <a role="button" class="btn btn-info btn-block" href='{{ azure_authorize_url }}'>
         Sign in with Azure
       </a>
 
