--- a/views/base.twig
+++ b/views/base.twig
@@ -3,6 +3,7 @@
 <head>
   <title>{% block title %}{{ title }}{% endblock %} - Ridibooks CMS</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   {% if BASE_HREF %}
     <base href="//{{ BASE_HREF }}"/>
   {% endif %}
