Removed a inline src on login page

--- a/views/login.twig
+++ b/views/login.twig
@@ -8,18 +8,7 @@
   {% include '/comm/icon.twig' %}
   <link rel="stylesheet" href="{{ BOWER_PATH }}/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="{{ BOWER_PATH }}/bootstrap/dist/css/bootstrap-theme.min.css">
-
-  <style>
-    body {
-      padding-top: 120px;
-      padding-bottom: 40px;
-    }
-
-    .comment {
-      color: #999;
-      text-align: center;
-    }
-  </style>
+  <link rel="stylesheet" href="{{ STATIC_URL }}/css/admin/login.css">
 </head>
 
 <body>
