--- a/views/welcome.twig
+++ b/views/welcome.twig
@@ -8,7 +8,7 @@
   <div class="col-xs-12">
     <ul>
       <li>권한 신청하기: <a href="https://app.asana.com/0/215306209905636/215207316128603" target="_blank">개발 지원 요청</a></li>
-      <li>CMS 매뉴얼: <a href="https://ridicorp.atlassian.net/wiki/spaces/operation/pages/239796419/CMS" target="_blank">위키 바로가기</a></li>
+      <li>CMS 매뉴얼: <a href="https://www.notion.so/ridi/CMS-40ab69bea84b4313bd0214f95129d2da" target="_blank">위키 바로가기</a></li>
     </ul>
   </div>
 {% endblock %}
